Corrected Dir Structer

--- a/framerate.html
+++ b/framerate.html
@@ -1,4 +1,4 @@
-<script src="WorkerQueue/WorkerQueue.js" ></script>
+<script src="js/WorkerQueue.js" ></script>
 
 <h1>Frame rate</h1>
 <div id="q1" style="width:200px;height:100px;border:5px solid red"></div>
